force-app/main/default/objects/Client_Capital_and_Revenue__c/Client_Capital_and_Revenue__c.object-meta.xml
<CustomObject>
    <description>Case #1263 - Client Overview - Stores Client Capital Utilization and ROE / CROC data that is fed into salesforce on a monthly basis by CRT. The data from this object should only be shown on the client overview page and only be visible to the client owner and members on the client service team.</description>
    <label>Client Capital and Revenue</label>
    <nameField>
        <displayFormat>CCR-{0000000000}</displayFormat>
        <label>Client Capital and Revenue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Capital and Revenue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>