force-app/main/default/objects/Client_Capital_and_Revenue__c/fields/Capital_Utilisation_USD__c.field-meta.xml
<CustomField>
    <fullName>Capital_Utilisation_USD__c</fullName>
    <description>Used to store the Capital Utilisation in ZAR</description>
    <label>Capital Utilisation USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>