force-app/main/default/objects/Client_Capital_and_Revenue__c/fields/CROC_USD__c.field-meta.xml
<CustomField>
    <fullName>CROC_USD__c</fullName>
    <description>Used to store the CROC in USD</description>
    <label>CROC USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>