force-app/main/default/objects/Client_Capital_and_Revenue__c/fields/CROC_ZAR__c.field-meta.xml
<CustomField>
    <fullName>CROC_ZAR__c</fullName>
    <description>Used to store CROC in ZAR</description>
    <label>CROC ZAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>